# matcom_scheduler

./: .gitignore  LICENSE  Makefile  Procfile  README.md  main.py  pyproject.toml  requirements.txt
bot/: __init__.py  bot.py  filters.py  handlers.py  utils.py
bot/handlers/: __init__.py  cancel.py  create.py  filters.py  list.py  start.py  utils.py  vote.py
model/: __init__.py  model.py  utils.py
src/: __init__.py
src/bot/: __init__.py  bot.py
src/bot/handlers/: __init__.py  cancel.py  close.py  config.py  create.py  list.py  model_selector.py  start.py  status.py  utils.py  vote.py
src/bot/messages/: messages.py
src/model/: __init__.py  base.py  dea_ar_model.py  minimun.py  minumun.py  model.py  more_popular.py  most_popular.py  positions.py  score.py  simple_model.py
